<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <EditText
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/profile_hint"
        />
    <EditText
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/screct_hint"
        />

    <Button
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/login"
        android:id="@+id/login_dialog_login_text_view"
        android:background="#f00"
        android:textColor="#fff"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/weibo_login_icon"
                android:src="@drawable/weibo_login"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weibo_login_icon"
                android:text="@string/weibo_login"/>

            </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/weixin_login_icon"
                android:src="@drawable/weixin_login"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weixin_login_icon"
                android:text="@string/weixin_login"/>

        </RelativeLayout>



        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="注册豆瓣账号"
        android:gravity="center"/>

</LinearLayout>